Refactorized project